--- a/styles/app.css
+++ b/styles/app.css
@@ -34,3 +34,29 @@ ul {
   background: yellow;
 }
 */
+
+.RichEditor-controls {
+  font-family: 'Helvetica', sans-serif;
+  font-size: 14px;
+  margin-bottom: 5px;
+  user-select: none;
+}
+
+.RichEditor-styleButton {
+  color: #999;
+  cursor: pointer;
+  margin-right: 16px;
+  padding: 2px 0;
+  display: inline-block;
+}
+
+.RichEditor-activeButton {
+  color: #5890ff;
+}
+
+.blurring.dimmable>:not(.dimmer) {
+  -webkit-transition:.1s -webkit-filter ease !important;
+  transition:.1s -webkit-filter ease !important;
+  transition:.1s filter ease !important;
+  transition:.1s filter ease,.1s -webkit-filter ease !important;
+}
