--- a/src/components/TextEntry/StyleButton.css
+++ b/src/components/TextEntry/StyleButton.css
@@ -1,11 +1,11 @@
-.RichEditor-controls {
+.DraftEditor-controls {
   font-family: 'Helvetica', sans-serif;
   font-size: 14px;
   margin-bottom: 5px;
   user-select: none;
 }
 
-.RichEditor-styleButton {
+.DraftEditor-styleButton {
   color: #999;
   cursor: pointer;
   margin-right: 16px;
@@ -13,6 +13,6 @@
   display: inline-block;
 }
 
-.RichEditor-activeButton {
+.DraftEditor-activeButton {
   color: #5890ff;
 }
