--- a/src/containers/TextEditor/TextEditor.css
+++ b/src/containers/TextEditor/TextEditor.css
@@ -1,3 +1,10 @@
+.DraftEditor-controls {
+  font-family: 'Helvetica', sans-serif;
+  font-size: 14px;
+  margin-bottom: 5px;
+  user-select: none;
+}
+
 .DraftEditor-root .public-DraftEditor-content {
   min-height: 100px;
 }
