--- a/src/components/Statistics/RegressionChart.css
+++ b/src/components/Statistics/RegressionChart.css
@@ -1,18 +1,15 @@
-.dot {
-  stroke: #293b47;
-  fill: rgb(47, 117, 167)
-}
-
-.axis text {
-  font-size: 12px;
-}
-
-.text-label {
-  font-size: 12px;
+.label {
+  fill: black;
+  text-anchor: end;
 }
 
 .regression-line {
-  stroke: #E4002B;
   fill: none;
   stroke-width: 3;
+}
+
+.key-dot {
+  height: 12px;
+  margin-right: .5em;
+  width: 12px;
 }
