Added additional achievements info, fixes and balancing

--- a/src/containers/Achievements/Achievements.css
+++ b/src/containers/Achievements/Achievements.css
@@ -22,3 +22,15 @@
     width: 100%;
   }
 }
+
+.achievements-stats {
+  display: flex;
+  justify-content: space-around;
+}
+
+.achievements-statistic {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding: 10px;
+}
